--- a/CSS/Selectors.html
+++ b/CSS/Selectors.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS | CLASS | ID</title>
-    <link rel="stylesheet" href="CSS/CSS-Class-ID.css">
+    <link rel="stylesheet" href="/CSS/Selectors.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap" rel="stylesheet">
 
 </head>
 <body>
+
+    <ul>
+        <li>Lorem.</li>
+        <li>Id!</li>
+        <li>Mollitia.</li>
+        <li>Ratione?</li>
+        <li>Accusantium.</li>
+        <li>Tempore.</li>
+        <li>Ad.</li>
+    </ul>
    
   <h1 class="text-green fs-30">fs-30 text-green</h1>
 
