--- a/çalışma.html
+++ b/çalışma.html
@@ -25,7 +25,7 @@
     </ul>
     <li>Lorem, ipsum dolor. li</li>
     <li>Lorem ipsum dolor sit.</li>
-    <p>Lorem, ip</p>
+    <p>Lorem, ip *****</p>
     <input type="text">
     <article>
         <h1>Lorem, ipsum dolor.</h1>
